# bookclub

./: README.md  docker-compose.yml
bookclub-api/: .env  .env.TEMPLATE  Cargo.toml  Dockerfile  LICENSE-3RD-PARTY
bookclub-api/src/: book_repository.rs  book_service.rs  create_book.rs  delete_book.rs  deprecated_handlers.rs  get_book.rs  get_books.rs  handlers.rs  lib.rs  main.rs  meeting_repository.rs  meeting_service.rs  update_book.rs  vote_book.rs
bookclub-api/src/handlers/: create_book.rs  get_books.rs  mod.rs  update_book.rs
bookclub-client/: .dockerignore  .env.development  .env.production  Dockerfile  LICENSE-3RD-PARTY  package-lock.json  package.json  svelte.config.js  tsconfig.json
bookclub-client/src/: api.ts  types.ts
bookclub-client/src/components/: Book.svelte  BookForm.svelte  Button.svelte  Card.svelte  Input.svelte  InputNumber.svelte  InputText.svelte  InputTextArea.svelte  TextModal.svelte
bookclub-client/src/routes/: __layout.svelte  index.svelte
bookclub-client/src/routes/books/: [id].svelte  new.svelte
bookclub-client/static/: manifest.webmanifest
host/: dump  restore  www.zurichbookclub.com  zurichbookclub.com
