[package]
name = "bookclub-api"
version = "0.1.0"
authors = ["Martin Disch <martindisch@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "3.3.2"
env_logger = "0.8.2"
mongodb = "1.1.1"
dotenv = "0.15.0"
serde = "1.0.121"
futures = "0.3.12"
chrono = { version = "0.4.19", features = [ "serde" ] }
